<resources>
    <string name="app_name">무비 차차</string>
    <string name="trending_upper">Trending</string>
    <string name="rating">Rating</string>
    <string name="open_data_format">MM월 dd일 개봉</string>
    <string name="watch_teaser">Watch Teaser</string>
    <string name="transition_poster">movie_poster</string>
    <string name="story">Plot</string>
    <string name="actors">Casting</string>
    <string name="directors">Directors</string>
    <string name="article">Articles</string>
    <string name="ticketing">Ticketing</string>
    <string name="lotte_cinema">롯데시네마</string>
    <string name="cgv">CGV</string>
    <string name="mega_box">메가박스</string>
    <string name="no_image">No\nImage</string>
    <string name="failed_to_get_movie">영화정보를 받아올 수 없습니다.</string>
    <string name="trending_lower">trending</string>
    <string name="home">home</string>
    <string name="detail">detail</string>
    <string name="search">search</string>
    <string name="bookmark">bookmark</string>
    <string name="week">Week</string>
    <string name="box_office">Box Office</string>
    <string name="back_pressed_text">뒤로가기 버튼을 한번 더 누르면 종료됩니다.</string>
    <string name="year">Year</string>
    <string name="title_input_text">제목을 입력하세요</string>
    <string name="teaser_error">티저를 찾을 수 없습니다.</string>
    <string name="search_error">검색 결과를 받아올 수 없습니다.</string>
    <string name="search_notify">검색결과는 20개까지 반영됩니다</string>
    <string name="empty_search">검색 결과가 존재하지 않습니다(Kobis 기준)</string>
    <string name="not_know">알 수 없음</string>
    <string name="book_mark">Bookmark</string>
    <string name="share">share</string>
    <string name="network_error">인터넷 연결을 확인해주세요.</string>
    <string name="bookmark_on_message">북마크 설정됨</string>
    <string name="bookmark_off_message">북마크 해재됨</string>
</resources>