<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main">

        <TextView
            android:id="@+id/tv_trending"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="40dp"
            android:layout_marginTop="25dp"
            android:text="@string/trending_upper"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/tv_trending_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:alpha="0.1"
            android:text="@string/trending_lower"
            android:textColor="@color/secondary"
            android:textSize="68sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_trending" />

        <com.jackandphantom.carouselrecyclerview.CarouselRecyclerview
            android:id="@+id/rv_box_office"
            android:layout_width="match_parent"
            android:layout_height="240dp"
            android:layout_marginTop="30dp"
            app:layout_constraintTop_toBottomOf="@id/tv_trending"
            tools:listitem="@layout/item_box_office_movie" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_daily_refetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:backgroundTint="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rv_box_office"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_box_office">

            <ImageView
                android:id="@+id/iv_daily_restart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_restart"
                android:contentDescription="@null"
                android:src="@drawable/ic_restart" />

        </androidx.cardview.widget.CardView>


        <TextView
            android:id="@+id/tv_week"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week"
            android:textColor="@color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@id/tv_trending"
            app:layout_constraintTop_toBottomOf="@id/rv_box_office" />

        <TextView
            android:id="@+id/tv_box_office_background"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="7dp"
            android:layout_marginTop="10dp"
            android:alpha="0.1"
            android:text="@string/box_office"
            android:textColor="@color/secondary"
            android:textSize="68sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/tv_week" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_box_office_week"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="25dp"
            android:layout_marginTop="15dp"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_week"
            tools:listitem="@layout/item_box_office_week" />

        <androidx.cardview.widget.CardView
            android:id="@+id/cv_weekly_refetch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:alpha="0.8"
            android:backgroundTint="@android:color/transparent"
            android:visibility="gone"
            app:layout_constraintBottom_toBottomOf="@id/rv_box_office_week"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@id/rv_box_office_week">

            <ImageView
                android:id="@+id/iv_weekly_restart"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:background="@drawable/circle_restart"
                android:contentDescription="@null"
                android:src="@drawable/ic_restart" />

        </androidx.cardview.widget.CardView>
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>